--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
         "watch": "tsc -watch -p ./",
         "pretest": "npm run compile && npm run lint",
         "lint": "eslint src --ext ts",
-        "test": "vscode-test"
+        "test": "vscode-test",
+        "package": "vsce package"
     },
     "devDependencies": {
+        "@vscode/vsce": "^2.26.0",
         "@types/vscode": "^1.87.0",
         "@types/mocha": "^10.0.6",
         "@typescript-eslint/eslint-plugin": "^7.4.0",
